--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <script>
         // Загружаем JSON-файл с данными карт
-        fetch('cards.json')
+        fetch('tarot_cards_full.json')
             .then(response => response.json())
             .then(data => {
                 const cards = Object.entries(data); // Преобразуем объект в массив
