--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background-image: url('img.png'); /* Путь к фото */
+            background-image: url('img.png'); /* Путь к фоновому изображению */
             background-size: cover; /* Адаптирует размер фото */
             background-repeat: no-repeat; /* Не повторяет фон */
             background-position: center; /* Центрирует фон */
@@ -21,42 +21,62 @@
             align-items: center;
         }
 
-        .button-container {
+        .card-container {
             display: grid;
-            grid-template-columns: repeat(2, 1fr); /* 2 колонки кнопок */
-            gap: 20px; /* Расстояние между кнопками */
-            width: 80%; /* Ширина контейнера */
-            max-width: 400px; /* Максимальная ширина */
+            grid-template-columns: repeat(4, 1fr); /* 4 колонки (по 4 карты в строке) */
+            gap: 20px; /* Расстояние между картами */
+            width: 90%; /* Ширина контейнера */
+            max-width: 600px; /* Максимальная ширина */
         }
 
-        .button {
-            background-color: rgba(255, 255, 255, 0.8); /* Полупрозрачный фон */
-            border: none;
-            border-radius: 8px; /* Закругление углов */
-            padding: 15px;
-            font-size: 16px;
-            font-weight: bold;
-            color: #333; /* Цвет текста */
+        .card {
+            width: 100%; /* Карты занимают всю ширину ячейки */
+            aspect-ratio: 2/3; /* Пропорции карты (например, 2:3) */
+            position: relative;
+            perspective: 1000px; /* Создаёт эффект 3D */
             cursor: pointer;
-            transition: background-color 0.3s ease; /* Плавный переход */
         }
 
-        .button:hover {
-            background-color: rgba(255, 255, 255, 1); /* Более яркий фон при наведении */
+        .card-inner {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            transform-style: preserve-3d; /* Сохраняет 3D-пространство */
+            transition: transform 0.6s ease; /* Плавный переворот */
+        }
+
+        .card.flipped .card-inner {
+            transform: rotateY(180deg); /* Переворачивает карту */
+        }
+
+        .card-front,
+        .card-back {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            backface-visibility: hidden; /* Скрывает обратную сторону при перевороте */
+            border-radius: 8px; /* Закругление углов */
+        }
+
+        .card-front {
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            transform: rotateY(180deg); /* Лицевая сторона повернута на 180 градусов */
+        }
+
+        .card-back {
+            background-image: url('back.png'); /* Изображение рубашки карты */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
         }
     </style>
 </head>
 <body>
-    <!-- Контейнер для кнопок -->
-    <div class="button-container" id="button-container">
-        <button class="button">Карта 1</button>
-        <button class="button">Карта 2</button>
-        <button class="button">Карта 3</button>
-        <button class="button">Карта 4</button>
-        <button class="button">Карта 5</button>
-        <button class="button">Карта 6</button>
-        <button class="button">Карта 7</button>
-        <button class="button">Карта 8</button>
+    <!-- Контейнер для карт -->
+    <div class="card-container" id="card-container">
+        <!-- Здесь будут создаваться карты с помощью JavaScript -->
     </div>
 
     <script>
@@ -67,28 +87,47 @@
                 const cards = Object.entries(data); // Преобразуем объект в массив
                 const selectedCards = getRandomCards(cards, 8); // Выбираем 8 случайных карт
 
-                // Привязываем карты к кнопкам
-                const buttons = document.querySelectorAll('.button');
-                const chosenCards = []; // Массив для выбранных карт
+                // Создаём контейнер для карт
+                const cardContainer = document.getElementById('card-container');
 
-                buttons.forEach((button, index) => {
-                    button.dataset.cardTitle = selectedCards[index][1].title; // Сохраняем название карты
-                    button.addEventListener('click', handleButtonClick);
+                // Добавляем карты в контейнер
+                selectedCards.forEach((card, index) => {
+                    const cardElement = document.createElement('div');
+                    cardElement.classList.add('card');
+
+                    const cardInner = document.createElement('div');
+                    cardInner.classList.add('card-inner');
+
+                    const cardFront = document.createElement('div');
+                    cardFront.classList.add('card-front');
+                    cardFront.style.backgroundImage = `url('${card[0]}')`; // Устанавливаем лицевую сторону
+
+                    const cardBack = document.createElement('div');
+                    cardBack.classList.add('card-back');
+
+                    cardInner.appendChild(cardFront);
+                    cardInner.appendChild(cardBack);
+                    cardElement.appendChild(cardInner);
+
+                    cardElement.dataset.cardTitle = card[1].title; // Сохраняем название карты
+                    cardElement.addEventListener('click', handleCardClick);
+                    cardContainer.appendChild(cardElement);
                 });
 
                 let clickCount = 0; // Счётчик кликов
 
-                function handleButtonClick(event) {
-                    if (clickCount < 3) {
-                        event.target.textContent = event.target.dataset.cardTitle; // Показываем название карты
-                        chosenCards.push(event.target.dataset.cardTitle); // Добавляем карту в массив
+                function handleCardClick(event) {
+                    const card = event.currentTarget;
+
+                    if (!card.classList.contains('flipped')) {
+                        card.classList.add('flipped'); // Переворачиваем карту
+                        const cardTitle = card.dataset.cardTitle; // Получаем название карты
+                        alert(`Вы выбрали карту: ${cardTitle}`); // Выводим название карты
                         clickCount++;
 
-                        // Если выбрано 3 карты, отправляем их в Telegram
+                        // После выбора 3 карт выводится сообщение о завершении
                         if (clickCount === 3) {
-                            const telegramWebApp = window.Telegram.WebApp;
-                            telegramWebApp.sendData(chosenCards.join(', ')); // Отправляем данные в Telegram
-                            telegramWebApp.close(); // Закрываем веб-приложение
+                            alert('Вы выбрали все 3 карты!');
                         }
                     }
                 }
